@@ -62,7 +62,8 @@ import glob
 from distutils.core import Extension, setup
 from setupext import build_agg, build_gtkagg, build_tkagg, build_wxagg,\
      build_ft2font, build_image, build_windowing, build_transforms, \
-     build_contour, build_enthought, build_swigagg, build_gdk
+     build_contour, build_enthought, build_swigagg, build_gdk, \
+     build_subprocess
 import distutils.sysconfig
 
 major, minor1, minor2, s, tmp = sys.version_info
@@ -158,7 +159,10 @@ try: import subprocess
 except ImportError: havesubprocess = False
 else: havesubprocess = True
 
-if not havesubprocess: packages.append('subprocess')
+if not havesubprocess:
+    packages.append('subprocess')
+    if sys.platform == 'win32':
+        build_subprocess(ext_modules, packages)
 
 try: import datetime
 except ImportError: havedate = False
