@@ -1,3 +1,7 @@
+2006-03-17 Added _subprocess.c from Python upstream and hopefully
+           enabled building (without breaking) on Windows, although
+           not tested. - ADS
+
 2006-03-17 Updated subprocess.py to latest Python upstream and
            reverted name back to subprocess.py - ADS
 
